manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: chatbot
